# Workflow1

./: CMakeLists.txt  main.cpp
Workwflow/: ConfigR.cpp  ConfigR.h  Workflow.cpp  Workflow.h
Workwflow/Block/: Count.cpp  Count.h  Dump.cpp  Dump.h  Factory.cpp  Factory.h  Grep.cpp  Grep.h  ReadFile.cpp  ReadFile.h  Replace.cpp  Replace.h  Sort.cpp  Sort.h  Worker.h  WriteFile.cpp  WriteFile.h
